# ms-teams-transcript-retriever

./: .env.example  .gitignore  Makefile  README.md  create-secrets.sh  create-subscription.sh  create-topic.sh  payload copy.json  pyproject.toml  subscribe.py
function/: main.py  requirements.txt
processor/: main.py  prompt.py  requirements.txt
receiver/: README.md  main.py  requirements.txt
subscriber/: main.py  requirements.txt
terraform/: README.md  main.tf  outputs.tf  variables.tf
