[project]
name = "transcript-retriever"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "functions-framework>=3.9.2",
    "google-genai>=1.47.0",
    "markdown>=3.10",
    "microsoft-kiota-abstractions==1.9.6",
    "requests>=2.32.5",
    "msgraph-beta-sdk==1.43.0",
    "aiohttp==3.12.15",
    "azure-core==1.35.0",
    "azure-identity==1.24.0",
]
